--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1 class="h-primary">KRASHAK INNOVATIVE SOLUTION PRIVATE LIMITED</h1>
-    <h5>Director & Chief Executive Officer(CEO)....</h5>
+    <h1 class="h-primary">InternShip Programme Registor</h1>
     <br>
     <div class="container">
         <form action="" id="contactForm">
